--- a/help/index.html
+++ b/help/index.html
@@ -64,7 +64,14 @@
 		<article>
 	<h2>Documentation</h2>
 		<div>
-		The official documentation contains user's guide including input and output files full description as well as tutorials to help beginning with ECOGEN.
+		The official documentation contains full information to use and work with ECOGEN :
+		<ul>  
+			<li> Detailed installation instructions </li>
+			<li> I/O description </li>
+			<li> Tutorials </li>
+			<li> Test cases explained</li>
+			<li> And more... </li>
+		</ul>
 	</div>
 	<br />
 	<div class="colonneLeft">
