--- a/research/index.html
+++ b/research/index.html
@@ -78,7 +78,7 @@
 		<p> Each part and specificity of ECOGEN has been validated and the results published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN!<br />
 	Here is a list of publication describing or using ECOGEN: </p>
 	<ul>
-		<li> Petitpas, F., Schmidmayer, K., Le Martelot, S. &amp; Daniel, E. (2019). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. Computer Physics Communications. </li>  
+		<li> Schmidmayer, K., Petitpas, F., Le Martelot, S. &amp; Daniel, E. (2019). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. Computer Physics Communications. </li>  
 		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. Journal of Computational Physics<a href="https://hal.archives-ouvertes.fr/hal-01715696v2" target="_blank">hal.archives-ouvertes.fr/hal-01715696v2 </a>.</li>
 		<li> Schmidmayer, K., Marty, A., Petitpas, F., &amp; Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows <a href="https://arxiv.org/ftp/arxiv/papers/1805/1805.01363.pdf" target="_blank">arXiv preprint arXiv:1805.01363</a>. </li>
 		<li> Schmidmayer, K., Bryngelson, S. H., &amp; Colonius, T. (2019). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics <a href="https://arxiv.org/pdf/1903.08242.pdf" target="_blank">arXiv preprint arXiv:1903.08242. </a> </li>
