--- a/start/index.html
+++ b/start/index.html
@@ -87,7 +87,9 @@
 
 <article>
 	<h2> First use of ECOGEN </h2>
-	<p> ECOGEN is including a given number of simple prebuild test cases. Each test can be used as a basis for a new one. Entry files are detailled in the <em>ECOGEN_V1.0_userGuide.pdf</em> file included in the package. </p>
+	<p> 
+		Tutorials are available in the <a href="https://code-mphi.github.io/ECOGEN/docs/sphinx_docs/Chap4_1startWithECOGEN.html" target="_blank">official documentation</a> website.
+	</p>
 </article>
 
     </main>
