--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 
     <main>
       <!-- <article> -->
-        <div id="subtitle">The open source CFD plateform for numerical simulation of compressible multiphase flows </div>
+        <div id="subtitle">The open-source CFD plateform for numerical simulation of compressible multiphase flows </div>
 
 
       <!-- </article> -->
     </main>
     <footer>
-	<div> ECOGEN is developped by  <a  href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
+	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
 	
 	<div><span class="copy-left">©</span> ECOGEN</div>
 </footer>
