--- a/research/index.html
+++ b/research/index.html
@@ -62,27 +62,29 @@
     <main>
 		<h1>Research</h1>
 		<article>
-	<h2> Diffuse interface method </h2>
-	<p>ECOGEN is a receptacle of a story of diffuse interface method (DIM) theory that started in the late 90s.
-	 DIM summarizes more than 20 years of researches on multiphase flow<sup>1</sup> modelling with the objective to develop mathematical models as well as their associated numerical methods.  </p><p>What is a diffuse interface? In DIM theory, the interfaces between pure phases are captured as diffuse numerical zones meaning that one goes continuously from one phase to another.</p>
+	<h2> Diffuse-interface method </h2>
+	<p> ECOGEN is a receptacle of a story of diffuse-interface method (DIM) theory that started in the late 90s.
+	 DIM summarizes more than 20 years of researches on multiphase flow<sup>1</sup> modelling with the objective to develop mathematical models as well as their associated numerical methods. </p><p> What is a diffuse interface? In DIM theory, the interfaces between pure phases are captured as diffuse numerical zones meaning that one goes continuously from one phase to another. </p>
 	 <img src="/ECOGEN/assets/images/diffInterface.png" alt="diffuse interface" />
-	 <figcaption>1D extraction of the diffuse interface zone of a water droplet.</figcaption>
-	 <p> This way is possible thanks to a thermodynamical consistency. Then, the flow solution does no longer requires interface tracking algorithms: It became easy to simulate complex topological shape evolutions between miscible or non miscible fluid. Moreover, pressure waves (shock waves, acoustic waves) can propagate and interact properly in the whole flow.</p><p>
-	 The basic research on DIM is now matured enough to propose ECOGEN, a numerical tool that can be largely cast and use to solve industrial as well as research  multiphase flow problems. 
+	 <figcaption>1D extraction of the diffuse-interface zone of a water droplet.</figcaption>
+	 <p> This way is possible thanks to a thermodynamics consistency. Then, the flow solution does no longer requires interface tracking algorithms: It became easy to simulate complex topological-shape evolutions between miscible or non-miscible fluids. Moreover, pressure waves (shock waves, acoustic waves) can propagate and interact properly in the whole flow. </p><p>
+	 The base research on DIM is now matured enough to propose ECOGEN, a numerical tool that can be largely cast and use to solve industrial as well as research multiphase flow problems. 
 	</p>
-	<p class="notes"><sup>1</sup> : The multiphase flows can involve pure phases but also mixture of phases.</p>
+	<p class="notes"><sup>1</sup>: The multiphase flows can involve pure phases but also mixture of phases. </p>
 </article>
 
 <article>
 	<h2> Publications </h2>
-		<p> Each part and specificity of ECOGEN has been validated and the results published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN!<br />
+		<p> Each part and specificity of ECOGEN has been validated and the results are published in international journals after a reviewing process. Work in progress must pass this stage before to be included in ECOGEN!<br />
 	Here is a list of publication describing or using ECOGEN: </p>
 	<ul>
-		<li> Schmidmayer, K., Petitpas, F., Le Martelot, S. &amp; Daniel, E. (2019). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. Computer Physics Communications. </li>  
-		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. Journal of Computational Physics<a href="https://hal.archives-ouvertes.fr/hal-01715696v2" target="_blank">hal.archives-ouvertes.fr/hal-01715696v2 </a>.</li>
-		<li> Schmidmayer, K., Marty, A., Petitpas, F., &amp; Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows <a href="https://arxiv.org/ftp/arxiv/papers/1805/1805.01363.pdf" target="_blank">arXiv preprint arXiv:1805.01363</a>. </li>
-		<li> Schmidmayer, K., Bryngelson, S. H., &amp; Colonius, T. (2019). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics <a href="https://arxiv.org/pdf/1903.08242.pdf" target="_blank">arXiv preprint arXiv:1903.08242. </a> </li>
-		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. In 46th AIAA Fluid Dynamics Conference (p. 4269). </li>
+		<li> Schmidmayer, K., Petitpas, F., Le Martelot, S. &amp; Daniel, E. (2019). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. Computer Physics Communications. </li>
+		<li> Schmidmayer, K., Bryngelson, S. H., &amp; Colonius, T. (2019). An assessment of multicomponent flow models and interface capturing schemes for spherical bubble dynamics. Journal of Computational Physics. <a href="https://arxiv.org/pdf/1903.08242.pdf" target="_blank">arXiv preprint arXiv:1903.08242 </a> </li>
+		<li> Pishchalnikov, Y. A., Behnke-Parks, W. M., Schmidmayer, K., Maeda, K., Colonius, T., Kenny, T. W., &amp; Laser, D. J. (2019). High-speed video microscopy and numerical modeling of bubble dynamics near a surface of urinary stone. The Journal of the Acoustical Society of America. </li>
+		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2019). Adaptive Mesh Refinement algorithm based on dual trees for cells and faces for multiphase compressible flows. Journal of Computational Physics. <a href="https://hal.archives-ouvertes.fr/hal-01715696v2" target="_blank">hal.archives-ouvertes.fr/hal-01715696v2 </a></li>
+		<li> Schmidmayer, K., Marty, A., Petitpas, F., &amp; Daniel, E. (2018). ECOGEN, an open-source tool dedicated to multiphase compressible multiphysics flows. 53rd 3AF International Conference on applied Aerodynamics. <a href="https://arxiv.org/ftp/arxiv/papers/1805/1805.01363.pdf" target="_blank">arXiv preprint arXiv:1805.01363 </a> </li>
+		<li> Schmidmayer, K., Petitpas, F., Daniel, E., Favrie, N. &amp; Gavrilyuk, S. (2017). A model and numerical method for compressible flows with capillary effects. Journal of Computational Physics. <a href="https://hal.archives-ouvertes.fr/hal-01297432" target="_blank">hal.archives-ouvertes.fr/hal-01297432 </a> </li>
+		<li> Schmidmayer, K., Petitpas, F., &amp; Daniel, E. (2016). A model and numerical method for high speed flows with capillary, viscous and heat conduction effects. 46th AIAA Fluid Dynamics Conference. </li>
 	</ul>
 </article>
 
@@ -93,7 +95,7 @@
 
     </main>
     <footer>
-	<div> ECOGEN is developped by  <a  href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
+	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
 	
 	<div><span class="copy-left">©</span> ECOGEN</div>
 </footer>
