--- a/services/index.html
+++ b/services/index.html
@@ -61,15 +61,15 @@
 
     <main>
 		<h1>Services</h1>
-		<p>You have a physical problem, and you think ECOGEN can help you or your company, but you are not familiar with multiphase modelling ?
-You need a specific additional feature to be added in ECOGEN ?
-You are interested to become a partner ?</p>
+		<p>You have a physical problem and you think ECOGEN can help you or your company, but you are not familiar with multiphase modelling?
+You need a specific additional feature to be added in ECOGEN?
+You are interested to become a partner?</p>
 
 <p>Do not hesitate to contact us at <a href="mailto:ecogen@code-mphi.fr">ecogen@code-mphi.fr</a>.</p>
 
     </main>
     <footer>
-	<div> ECOGEN is developped by  <a  href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
+	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
 	
 	<div><span class="copy-left">©</span> ECOGEN</div>
 </footer>
