--- a/instalOnWindows/index.html
+++ b/instalOnWindows/index.html
@@ -63,31 +63,31 @@
 		<h1>Install on Windows</h1>
 		<article>
     <div> 
-        <h3> Preparing Windows 10 for ubuntu</h3>
-        <p>The simplest way is to take advantage of the free available ubuntu distribution on Windows 10. (An alternate solution is to install directly in Windows a C++ compiler and MPI library). </p>
-        <p>In the control panel or in the Microsoft Store, search for ubuntu.</p> 
+        <h3> Preparing Windows 10 for Ubuntu </h3>
+        <p> The simplest way is to take advantage of the free available Ubuntu distribution on Windows 10 (an alternative solution is to install directly on Windows a C++ compiler and MPI library). </p>
+        <p> In the control panel or in the Microsoft Store, search for Ubuntu. </p> 
         <img src="/ECOGEN/assets/images/W10_microsoftStore.jpg" alt="" />
-        <p>You can chose a specific Ubuntu distribution (e.g.: 18.04 LTS) while Ubuntu App select the last available distro. Before downloading the App, read the system requirements.      <img src="/ECOGEN/assets/images/W10_checkAppRequirements.jpg" alt="" /></p>
-        <p>Check the system requirements. For Ubuntu 18.04 release: Windows 10 version 1615.0 or higher, x64 architecture. (To find the OS version, open the <em class="surligne">Setting&gt;System&gt;About</em> panel: </p>
+        <p> You can choose a specific Ubuntu distribution (e.g.: 18.04 LTS) while Ubuntu App select the last available distro. Before downloading the App, read the system requirements.      <img src="/ECOGEN/assets/images/W10_checkAppRequirements.jpg" alt="" /> </p>
+        <p> Check the system requirements. For Ubuntu 18.04 release: Windows 10 version 1615.0 or higher, x64 architecture. To find the OS version, open the <em class="surligne">Setting&gt;System&gt;About</em> panel: </p>
         <img src="/ECOGEN/assets/images/W10_SystemRequirements.jpg" alt="" />
-        <p>In the <em class="surligne">Settings&gt;Update &amp; Security&gt;For developpers</em> panel enable <em class="surligne">Developer mode</em>  </p>
+        <p> In the <em class="surligne">Settings&gt;Update &amp; Security&gt;For developers</em> panel enable <em class="surligne">Developer mode</em> </p>
         <img src="/ECOGEN/assets/images/W10_DevelopperMode.jpg" alt="" />
-        <p>In the control panel, type and chose<em class="surligne">Turn Windows features on or off</em>. Tick the box <em class="surligne">Windows System for Linux</em></p>
+        <p> In the control panel, type and choose<em class="surligne">Turn Windows features on or off</em>. Tick the box <em class="surligne">Windows System for Linux</em> </p>
         <img src="/ECOGEN/assets/images/W10_WindowsSubSystem4Linux.jpg" style="width:75%;" alt="" />
-        <h3> Install ubuntu</h3>
+        <h3> Install Ubuntu </h3>
         <p> From the Microsoft store click on the <em class="surligne">Install</em> button of the Ubuntu App. Before using this app, restart the system. <br />  
-        Then, in the <em class="surligne">start</em> menu, click on the Ubuntu on windows 10 button to open a terminal. </p>
+        Then, in the <em class="surligne">start</em> menu, click on the Ubuntu on Windows 10 button to open a terminal. </p>
         <img src="/ECOGEN/assets/images/W10_Ubuntu_button.jpg" style="width:50%;" alt="" />
-        <p>For the first time, an username and and a password may be required.<br />
+        <p> For the first time, a username and a password may be required.<br />
         <img src="/ECOGEN/assets/images/ubuntu_term.jpg" alt="" /> </p>
-        <p>ECOGEN environment can be now completed in the companion section  <a href="/ECOGEN/prerequisitesUbuntu">Ubuntu prerequisities</a>.</p>
+        <p> ECOGEN environment can be now completed in the companion section <a href="/ECOGEN/prerequisitesUbuntu">Ubuntu prerequisites</a>. </p>
     </div>
 </article>
 
 
     </main>
     <footer>
-	<div> ECOGEN is developped by  <a  href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
+	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
 	
 	<div><span class="copy-left">©</span> ECOGEN</div>
 </footer>
