--- a/404.html
+++ b/404.html
@@ -37,9 +37,9 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
-	  	<li><a href="/ECOGEN/start/">Start</a></li>
+	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
-	  	<li><a href="/ECOGEN/research/">Research</a></li>
+	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
 	  
 	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
