--- a/help/index.html
+++ b/help/index.html
@@ -41,9 +41,9 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
-	  	<li><a href="/ECOGEN/start/">Start</a></li>
+	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
-	  	<li><a href="/ECOGEN/research/">Research</a></li>
+	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
 	  
 	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
@@ -62,24 +62,49 @@
     <main>
 		<h1>Help</h1>
 		<article>
-	<h2>Documentation</h2>
-		<div>
-		The official documentation contains full information to use and work with ECOGEN:
+	<h1>Documentation</h1>
+	<div>
+		The official documentation contains all information to use and work with ECOGEN:
+			<a class="badge" href="https://code-mphi.github.io/ECOGEN/docs/sphinx_docs/index.html" target="_blank"> <img src="https://img.shields.io/badge/Docs-ECOGEN-9cf.svg" alt="documentation" /></a>
 		<ul>  
-			<li> Detailed installation instructions </li>
-			<li> I/O description </li>
-			<li> Tutorials </li>
-			<li> Test cases explained</li>
+			<li> Detailed installation instructions, </li>
+			<li> I/O description, </li>
+			<li> Tutorials, </li>
+			<li> Test cases explained, </li>
 			<li> And more... </li>
 		</ul>
 	</div>
-	<br />
-	<div class="colonneLeft">
-		<div>
-			Access to the official documentation:
-		</div>
-		<a href="https://code-mphi.github.io/ECOGEN/docs/sphinx_docs/index.html" target="_blank"> <img id="docs" src="/ECOGEN/assets/images/docs.png" alt="documentation" /> </a>
+</article>
+
+<article>
+	<h1>Issues / Contributions</h1>
+	<div>
+		Issues and contributions to ECOGEN project are possible directly on GitHub: <a href="https://github.com/code-mphi/ECOGEN" target="_blank">https://github.com/code-mphi/ECOGEN</a>.
 	</div>
+</article>
+
+<article>
+	<h1>Citation</h1>
+		<div>
+		If you use ECOGEN for your research/applications, please cite ECOGEN using:
+		<p>
+	  	Schmidmayer, K., Petitpas, F., Le Martelot, S. &amp; Daniel, E. (2020). ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows. <i>Computer Physics Communications</i>.
+	  	<a class="badge" href="https://doi.org/10.1016/j.cpc.2019.107093" target="_blank"><img src="https://img.shields.io/badge/DOI-10.1016/j.cpc.2019.107093-green.svg" alt="DOI link" /></a>
+		</p>
+		<pre>
+		  <code> 
+@article{schmidmayer2020ecogen,
+  doi = {10.1016/j.cpc.2019.107093},
+  url = {https://doi.org/10.1016/j.cpc.2019.107093},
+  title={ECOGEN: An open-source tool for multiphase, compressible, multiphysics flows},
+  author={Schmidmayer, Kevin and Petitpas, Fabien and Le Martelot, S{\'e}bastien and Daniel, E},
+  journal={Computer Physics Communications},
+  volume={251},
+  year={2019}
+}
+		  </code>
+		</pre>
+		</div>
 </article>
 
     </main>
