--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
-	  	<li><a href="/ECOGEN/start/">Start</a></li>
+	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
-	  	<li><a href="/ECOGEN/research/">Research</a></li>
+	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
 	  
 	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
@@ -69,11 +69,36 @@
     </div>
 
     <main>
-      <!-- <article> -->
-        <div id="subtitle">The open-source CFD plateform for numerical simulation of compressible multiphase flows </div>
+      <div id="subtitle">The open-source CFD plateform for numerical simulation of compressible multiphase flows </div>
+
+      <hr />
+
+<article>
+	<h1> New release ECOGEN_v2.0 </h1>
+	<p>A new release, ECOGEN_v2.0, is available on GitHub. It includes new features and fixes bugs:
+		<ul>		
+			<li> AMR multicore computations are now efficiently load balanced. </li>
+			<li> New equation of state implemented: Noble-Abel Stiffened-Gas EOS.</li>
+		</ul>	
+	</p>
+		<img src="/ECOGEN/assets/images/BubbleHelium.gif" alt="Load balancing on a bubble-shock interaction." />
+</article>
+<hr />
+
+<article>
+	<h1> ECOGEN GUI now available!</h1>
+	<p>A simple Graphical User Interface has been developed to easily edit ECOGEN input files.
+		<ul>		
+			<li> Manage easily your equation-of-state parameters. </li>
+			<li> Create, open and save test cases.</li>
+			<li> Prepare runs for ECOGEN.</li>
+		</ul>	
+	</p>
+	<img src="/ECOGEN/assets/images/ECOGEN_GUI.png" alt="ECOGEN_GUI view" />
+</article>
 
 
-      <!-- </article> -->
+
     </main>
     <footer>
 	<div> ECOGEN is developped by <a href="https://code-mphi.fr/" target="_blank" > Code-m&Phi; </a> members </div>
