--- a/overview/index.html
+++ b/overview/index.html
@@ -41,9 +41,9 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
-	  	<li><a href="/ECOGEN/start/">Start</a></li>
+	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
-	  	<li><a href="/ECOGEN/research/">Research</a></li>
+	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
 	  
 	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
@@ -84,13 +84,13 @@
 	</aside>
 	<div>
 		<article>
-			<h2> <span class="lettre">E</span>COGEN is Evolutive </h2>
+			<h3> <span class="lettre">E</span>COGEN is Evolutive </h3>
 			<p>Academic research results never represent achievements but rather step forwards. This is all the more noticeable in the young discipline of numerical sciences where models and methods are in constant evolution to better represent physical phenomena. In the structure of ECOGEN, the modular aspect of C++ programming language has been used to help developing future evolutions. </p>
 			<img src="/ECOGEN/assets/images/mainClasses.png" alt="general ECOGEN structure" />
 			<p>Thanks to that, it becomes easy for developers to add a new equation of state or a flow model. </p>
 		</article>
 		<article>
-			<h2> E<span class="lettre">C</span>OGEN is designed for Compressible flows </h2>
+			<h3> E<span class="lettre">C</span>OGEN is designed for Compressible flows </h3>
 			<p>Compressible information is transmitted thanks to wave propagation. Mathematical systems of equations modeling compressible flows present hyperbolic formulations that should be specifically treated numerically. </p>
 			<div class="flex">
 				<img src="/ECOGEN/assets/images/shocks.png" alt="shock waves" />
@@ -98,22 +98,22 @@
 			</div>
 		</article>
 		<article>
-			<h2> EC<span class="lettre">O</span>GEN is Open Source </h2>
+			<h3> EC<span class="lettre">O</span>GEN is Open Source </h3>
 			<p>ECOGEN is an open-source project distributed under <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank"> GNU GPLv3 License </a> and available on <a href="https://github.com/code-mphi/ECOGEN" target="_blank"> GitHub</a>. Interested developers are encouraged to contribute in the project. </p>
 		</article>
 		<article>
-			<h2> ECO<span class="lettre">G</span>EN is Genuine </h2>
+			<h3> ECO<span class="lettre">G</span>EN is Genuine </h3>
 			<div class="flex">
-				<p>Existing CFD codes can treat multiphase flows, but ECOGEN is the first to use the diffuse-interface theory to dynamically capture the complex shapes of multiphase flows on structured or unstructured grids. Moreover, it includes an Adaptive Mesh Refinement (AMR) method for Cartesian grids specifically developed and optimized for such multiphase flows. </p>
+				<p>Existing CFD codes can treat multiphase flows, but ECOGEN is the first to use the diffuse-interface theory to dynamically capture the complex shapes of multiphase flows on structured or unstructured grids. Moreover, it includes an Adaptive Mesh Refinement (AMR) method for Cartesian grids specifically developed and optimized for such multiphase flows and now equiped with efficient load balancing for multicore computations. </p>
 				<img src="/ECOGEN/assets/images/maillage.png" alt="mesh" />
 			</div>
 		</article>
 		<article>
-			<h2> ECOG<span class="lettre">E</span>N is Easy </h2>
+			<h3> ECOG<span class="lettre">E</span>N is Easy </h3>
 			<p>All you need is a C++ compiler running with Message Passing Interface (MPI) library to use ECOGEN. The standard VTK file format used for results makes the post-treatment flexible. Just follow the tutorials and compute! </p>
 		</article>	
 		<article>
-			<h2> ECOGE<span class="lettre">N</span> is N-phase </h2>
+			<h3> ECOGE<span class="lettre">N</span> is N-phase </h3>
 			<p>Even if ECOGEN is able to solve single-phase gas or compressible liquid dynamics, it reveals its power when a flow is composed with an arbitrary number of phases. If you can now simulate a liquid phase with its vapor, there is no difficulty to add one or several inert phases in the flow. </p>
 		</article>
 	</div>
