--- a/services/index.html
+++ b/services/index.html
@@ -41,9 +41,9 @@
 	  
 	  	<li><a href="/ECOGEN/gallery/">Gallery</a></li>
 	  
-	  	<li><a href="/ECOGEN/start/">Start</a></li>
+	  	<li><a href="/ECOGEN/ressources/">Ressources</a></li>
 	  
-	  	<li><a href="/ECOGEN/research/">Research</a></li>
+	  	<li><a href="/ECOGEN/publications/">Publications</a></li>
 	  
 	  	<li><a href="/ECOGEN/partners/">Partners</a></li>
 	  
@@ -61,11 +61,26 @@
 
     <main>
 		<h1>Services</h1>
-		<p>You have a physical problem and you think ECOGEN can help you or your company, but you are not familiar with multiphase modelling?
-You need a specific additional feature to be added in ECOGEN?
-You are interested to become a partner?</p>
+		<article>
+	<h1>Support</h1>
+	<div>
+		<p>
+		You have a physical problem and you think ECOGEN can help you or your company, but you are not familiar with multiphase modelling?
+		You need a specific additional feature to be added in ECOGEN?
+		You are interested to become a partner?
+		</p>
+		<p>
+		Do not hesitate to contact the development team: <a href="mailto:ecogen@code-mphi.fr">ecogen@code-mphi.fr</a>
+		</p>
+	</div>
+</article>
+<article>
+	<h1>Issues/Contributions</h1>	
+	<div>
+		Please do not use the previous email address for issues and contributions to ECOGEN project. Instead, use the GitHub issues and pull requests: <a href="https://github.com/code-mphi/ECOGEN" target="_blank">https://github.com/code-mphi/ECOGEN</a>.
+	</div>
+</article>
 
-<p>Do not hesitate to contact us at <a href="mailto:ecogen@code-mphi.fr">ecogen@code-mphi.fr</a>.</p>
 
     </main>
     <footer>
