--- a/gallery/index.html
+++ b/gallery/index.html
@@ -107,8 +107,8 @@
 	<p> The ability to treat cavitation problems is definitely one of the major assets of the diffuse-interface formulation. Now, thanks to consistent thermodynamics consideration, it is possible to intrinsically simulate interface appearance / disappearance between a liquid and its vapor without any specific algorithm for interface tracking. </p>
 	<div class="gallery">
 		<div class="galleryVideo">
-			<!-- <img class= "galleryGif" src="/ECOGEN/assets/images/BubbleCollapse.gif" alt="Bubble collapse." /> -->
-			<video src="/ECOGEN/assets/videos/bubbleCollapse.webm" controls="" preload="">Sorry, your browser does not support webm video format or video HTML element.</video>
+			<img class="galleryGif" src="/ECOGEN/assets/images/BubbleCollapse.gif" alt="Bubble collapse." />
+			<!-- <video  src="/ECOGEN/assets/videos/bubbleCollapse.webm" controls preload>Sorry, your browser does not support webm video format or video HTML element.</video> -->
 			<figcaption>Bubble collapse near a wall. Courtesy of Caltech, MCE. </figcaption>
 		</div>
 		<div class="galleryVideo">
